--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,20 @@
   width: 600px;
   flex-direction: column;
 }
+
+.link-button {
+  display: inline-block;
+  padding: 12px 24px;
+  background-color: #0077cc;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.link-button:hover {
+  background-color: #005ea6;
+}
